<resources>
    <string name="app_name">Digital Twin App</string>
    
    <string name="login_title">Benvenuto in Green Smart Home!</string>
    <string name="login_subtitle">Accedi con le credenziali del tuo account per cominciare ad utilizzare l\'app</string>
    <string name="login_email_hint">Inserisci l\'email</string>
    <string name="login_password_hint">Inserisci la password</string>
    <string name="login_button_text">Procedi</string>
    <string name="login_forgot_password">Hai dimenticato la password?</string>
    <string name="app_logo_description">Logo dell\'applicazione Green Smart Home</string>
    <string name="login_register_button_text">Non hai un account? Registrati</string>

    <string name="error_email_empty">L\'email non può essere vuota.</string>
    <string name="error_email_invalid_format">Il formato dell\'email non è valido.</string>
    <string name="error_password_empty">La password non può essere vuota.</string>
    <string name="error_password_too_short">La password deve contenere almeno %d caratteri.</string>
    <string name="error_invalid_credentials">Email o password non corretti.</string>
    <string name="error_no_internet">Nessuna connessione a internet.</string>
    <string name="error_unknown">Si è verificato un errore sconosciuto.</string>
    <string name="error_server_unavailable">Il server non è al momento disponibile.</string>

    <string name="error_unauthorized">Non autorizzato. Controlla i tuoi permessi.</string>
    <string name="error_user_not_found">Utente non trovato.</string>
    <string name="error_email_exists">Questa email è già in uso.</string>

    <string name="nav_home">Home</string>
    <string name="nav_consumption">Consumi</string>
    <string name="nav_automation">Automazioni</string>
    <string name="nav_devices">Dispositivi</string>

    
    <string name="format_energy_value">%.0f</string>
    <string name="format_cost_euro">€ %1$.2f</string>
    <string name="format_prediction_badge">%.0f%%</string>
    <string name="placeholder_dash">--</string>

    <string name="format_count_devices">%d dispositivi</string>
    <string name="format_count_rooms">%d stanze</string>
    <string name="format_count_groups">%d gruppi</string>

    
    <string name="date_format_pattern">MMMM yyyy</string>
    <string name="format_device_count">%d dispositivi</string>

    
    <string name="tab_day">Giorno</string>
    <string name="tab_week">Settimana</string>
    <string name="tab_month">Mese</string>
    <string name="tab_year">Anno</string>
    <string name="tab_rooms">Stanze</string>
    <string name="tab_groups">Gruppi</string>
    <string name="tab_unassigned">Non assegnati</string>
    <string name="format_energy_kwh">%1$.0f kWh</string>
    <string name="info">info\n</string>
    <string name="close">chiudi\n</string>

    
    <string name="empty_rooms_title">Nessun dispositivo trovato</string>
    <string name="empty_rooms_desc">Sembra che non ci siano dispositivi configurati nelle tue stanze.</string>

    <string name="empty_groups_title">Nessun gruppo</string>
    <string name="empty_groups_desc">I gruppi ti aiutano a organizzare dispositivi simili.</string>

    <string name="empty_unassigned_title">Tutto in ordine!</string>
    <string name="empty_unassigned_desc">Tutti i tuoi dispositivi sono stati assegnati a una stanza.</string>


    <string name="action_add">Aggiungi</string>
    <string name="action_add_count">Aggiungi (%d)</string>
    <string name="save">Salva</string>

    
    <string name="create_automation">Crea nuova automazione</string>
    <string name="no_automations">Nessuna automazione configurata</string>
    <string name="tap_to_create_automation">Tocca + per creare la tua prima automazione</string>


    <string name="automation_trigger_sun_at_event">Esattamente all\'evento</string>
    <string name="automation_trigger_sun_before">%s prima</string>
    <string name="automation_trigger_sun_after">%s dopo</string>

    <string name="sun_trigger_at_event">Esattamente all\'evento</string>

    
    <string name="sun_before_m">%d min prima</string>
    <string name="sun_before_h">%d h prima</string>
    <string name="sun_before_hm">%1$d h %2$d min prima</string>

    
    <string name="sun_after_m">%d min dopo</string>
    <string name="sun_after_h">%d h dopo</string>
    <string name="sun_after_hm">%1$d h %2$d min dopo</string>

    <string name="sun_event_sunrise">Quando sorge il sole</string>
    <string name="sun_event_sunset">Quando tramonta il sole</string>

    <!-- Testi brevi per Segmented Button -->
    <string name="sun_button_sunrise">Alba</string>
    <string name="sun_button_sunset">Tramonto</string>

    <string name="sun_at_sunrise">Esattamente all\'alba</string>
    <string name="sun_before_sunrise_m">%d min prima dell\'alba</string>
    <string name="sun_before_sunrise_h">%d h prima dell\'alba</string>
    <string name="sun_before_sunrise_hm">%1$d h %2$d min prima dell\'alba</string>
    <string name="sun_after_sunrise_m">%d min dopo l\'alba</string>
    <string name="sun_after_sunrise_h">%d h dopo l\'alba</string>
    <string name="sun_after_sunrise_hm">%1$d h %2$d min dopo l\'alba</string>

    
    <string name="sun_at_sunset">Esattamente al tramonto</string>
    <string name="sun_before_sunset_m">%d min prima del tramonto</string>
    <string name="sun_before_sunset_h">%d h prima del tramonto</string>
    <string name="sun_before_sunset_hm">%1$d h %2$d min prima del tramonto</string>
    <string name="sun_after_sunset_m">%d min dopo il tramonto</string>
    <string name="sun_after_sunset_h">%d h dopo il tramonto</string>
    <string name="sun_after_sunset_hm">%1$d h %2$d min dopo il tramonto</string>

    
    <string name="dialog_conflict_title">Attenzione ai consumi</string>
    <string name="dialog_conflict_edit">Modifica</string>
    <string name="dialog_conflict_ignore">Salva comunque</string>

    
    <string name="profile_icon_desc">Immagine del profilo utente</string>
    <string name="prev_date_desc">Torna alla data precedente</string>
    <string name="next_date_desc">Vai alla data successiva</string>
    <string name="automation_trigger_sun_offset_title">Quando?</string>
    <string name="cancel">Annulla</string>
    <string name="confirm">Conferma</string>

    
    <string name="logout">Esci</string>

    <plurals name="automations_count">
        <item quantity="one">%d Automazione</item>
        <item quantity="other">%d Automazioni</item>
    </plurals>

    <!-- Automation Detail -->
    <string name="automation_status">Stato</string>
    <string name="automation_status_active">Attiva</string>
    <string name="automation_status_inactive">Disattivata</string>
    <string name="automation_when_label">Quando</string>
    <string name="automation_then_label">Allora</string>
    <string name="automation_description_label">Descrizione</string>
    <string name="automation_detail_title">Dettagli automazione</string>
    <string name="automation_activated">Automazione attivata</string>
    <string name="automation_deactivated">Automazione disattivata</string>
    <string name="automation_deleted">Automazione eliminata</string>
    <string name="automation_updated">Automazione aggiornata</string>
    <string name="edit">Modifica</string>
    <string name="delete">Elimina</string>
    <string name="duplicate">Duplica</string>
    <string name="retry">Riprova</string>
    <string name="delete_automation_title">Eliminare l\'automazione?</string>
    <string name="delete_automation_message">Questa azione non può essere annullata.</string>
    <string name="automation_trigger_time">Orario</string>
    <string name="automation_trigger_solar">Evento solare</string>
    <string name="automation_trigger_device">Stato dispositivo</string>
    <string name="automation_at_time">Alle %s</string>
    <string name="automation_at_sunrise">All\'alba</string>
    <string name="automation_at_sunset">Al tramonto</string>
    <string name="automation_when_device_changes">Quando %s cambia</string>
    <string name="automation_no_trigger">Nessun trigger configurato</string>
    <string name="automation_no_actions">Nessuna azione configurata</string>
    <string name="automation_missing_trigger_or_action">Aggiungi un trigger e almeno un\'azione per procedere</string>
    <string name="automation_trigger_no_repeat">Non si ripete</string>
    <string name="automation_trigger_every_day">Ogni giorno</string>

    <!-- Traduzioni azioni automazioni -->
    <string name="action_turn_on">Accendi</string>
    <string name="action_turn_off">Spegni</string>
    <string name="action_toggle">Inverti</string>

    <string name="error_not_found">Elemento non trovato</string>
    <string name="edit_automation_title">Modifica automazione</string>
    <string name="edit_automation_name_title">Modifica nome</string>
    <string name="error_empty_name">Inserisci un nome</string>
    <string name="device_detail_name">Nome</string>
    <string name="device_detail_type">Tipo dispositivo</string>
    <string name="device_detail_room">Stanza</string>
    <string name="device_detail_group">Gruppo</string>
    <string name="device_detail_title">Dettagli dispositivo</string>
    <string name="device_detail_info_label">INFORMAZIONI</string>
    <string name="device_detail_position_label">POSIZIONE</string>
    <string name="no_room">Nessuna stanza</string>
    <string name="no_group">Nessun gruppo</string>

    <!-- Content Descriptions per Accessibilità -->
    <string name="content_desc_automation_icon">Icona automazione</string>
    <string name="content_desc_remove_widget">Rimuovi widget</string>
    <string name="content_desc_drag_handle">Trascina per riordinare</string>

    <!-- Widget Energia -->
    <string name="energy_widget_title">In tempo reale</string>
    <string name="energy_unit_kwh">kWh</string>
    <string name="energy_comparison_text">Rispetto alle\nstime giornaliere</string>

    <!-- Snackbar -->
    <string name="snackbar_undo">Annulla</string>
    <string name="snackbar_retry">Riprova</string>
    <string name="automation_deleted_pending">Automazione eliminata</string>
    <string name="automation_delete_cancelled">Eliminazione annullata</string>
    <string name="automation_saved">Automazione salvata</string>
    <string name="title_customize_home">Personalizza Home</string>
    <string name="title_home">Home</string>
    <string name="action_toggle_visibility">Mostra/Nascondi sezione</string>
    <string name="action_expand_collapse">Espandi/Comprimi sezione</string>

    <!-- Dashboard Empty State -->
    <string name="dashboard_all_hidden_title">Nessuna sezione visibile</string>
    <string name="dashboard_all_hidden_description">Tutte le sezioni sono nascoste. Tocca il pulsante di modifica per personalizzare la dashboard.</string>
</resources>
